# PathProfiler

./: README.md  pyproject.toml
src/pathprofiler/: __init__.py
src/pathprofiler/quality_assessment/: predict_slide_scores.py
